# memoire-stage-resources

./: LICENSE  README.md  references.bib
project-env-files/personal-work-repository/: conda-STREAM-environment.yml  pyproject.toml
project-env-files/profile_binr/: pyproject.toml
