[tool.poetry]
name = "rnaSeq-bin"
version = "0.1.0"
description = "Binarisation utilities for *RNA-seq data"
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
scipy = "^1.6.0"
scikit-learn = "^0.24.1"
statsmodels = "^0.12.2"
toml = "^0.10.2"
pyreadr = "^0.4.0"
unidip = "^0.1.1"
rpy2 = "^3.4.2"
sacred = "^0.8.2"
pybiomart = "^0.2.0"
anndata = "^0.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipython = "^7.20.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
plotly = "^4.14.3"
black = {version = "^20.8b1", allow-prereleases = true}
nbdime = "^2.1.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
